--- a/index.html
+++ b/index.html
@@ -72,28 +72,28 @@
                         <!-- <p><span class="fragment">1</span> <span class="fragment">-2</span> <span class="fragment">-5</span></p> -->
 						<br>
                         <a href="#" class="navigate-down">
-                            <img width="178" height="238" data-src="/image/arrow.png" alt="Down arrow">
+                            <img width="178" height="238" data-src="image/arrow.png" alt="Down arrow">
                         </a>
 					</section>
 					<section>
 						<h4>张标光</h4>
-						<img width="440" height="540" data-src="/image/zhangbiaoguang.jpg" alt="Down arrow">
+						<img width="440" height="540" data-src="image/zhangbiaoguang.jpg" alt="Down arrow">
 					</section>
 					<section>
 						<h4>娄文康</h4>
-						<img width="440" height="540" data-src="/image/louwenkang.jpg" alt="Down arrow">
+						<img width="440" height="540" data-src="image/louwenkang.jpg" alt="Down arrow">
 					</section>
 					<section>
 						<h4>谢基颜</h4>
-						<img width="440" height="540" data-src="/image/xiejiyan.jpg" alt="Down arrow">
+						<img width="440" height="540" data-src="image/xiejiyan.jpg" alt="Down arrow">
 					</section>
 					<section>
 						<h4>张景</h4>
-						<img width="440" height="540" data-src="/image/zhangjing.jpg" alt="Down arrow">
+						<img width="440" height="540" data-src="image/zhangjing.jpg" alt="Down arrow">
 					</section>
 					<section>
 						<h4>谭淑仪</h4>
-						<img width="440" height="540" data-src="/image/tanshuyi.jpg" alt="Down arrow">
+						<img width="440" height="540" data-src="image/tanshuyi.jpg" alt="Down arrow">
 					</section>
 				</section>
                 
@@ -103,7 +103,7 @@
                         <br>
                         <br>
                         <a href="#" class="navigate-down">
-                            <img width="178" height="238" data-src="/image/arrow.png" alt="Down arrow">
+                            <img width="178" height="238" data-src="image/arrow.png" alt="Down arrow">
                         </a>
 					</section>
                     <section>
